--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  user-select: none;
 }
 
 /* preloader style */
@@ -861,7 +862,7 @@ span {
   width: 100vw;
   min-height: 500px;
   padding: 20px;
-  background: url('./image/all3dshape.png') no-repeat center center/cover;
+  background: url('./image/cube3d.png') no-repeat center center/cover;
   background-color: #fffefe;
 }
 
@@ -1484,21 +1485,33 @@ span {
 /* responsive design for projects */
 @media(max-width: 1125px) {
   .horiz1 {
-    width: 30%;
-    top: 350px;
-    left: 20%;
+    width: 22%;
+    top: 285px;
+    left: 27.7%;
   }
 
   .horiz2 {
-    width: 30%;
+    width: 19.2%;
     top: 660px;
-    left: 50%;
+    left: 51%;
   }
 
   .horiz3 {
-    width: 30%;
-    top: 980px;
-    left: 20%;
+    width: 20%;
+    top: 1070px;
+    left: 30%;
+  }
+
+  .horiz4 {
+    width: 21%;
+    top: 1465px;
+    left: 50.7%;
+  }
+
+  .horiz5 {
+    width: 19.3%;
+    top: 1915px;
+    left: 30.3%;
   }
 
   .l1 {
@@ -1506,11 +1519,20 @@ span {
   }
 
   .l2 {
-    top: 527px;
+    top: 595px;
   }
 
   .l3 {
-    top: 847px;
+    top: 1000px;
+  }
+
+  .l4 {
+    top: 1400px;
+
+  }
+
+  .l5 {
+    top: 1850px;
   }
 
   .img-comb,
@@ -1531,7 +1553,7 @@ span {
   }
 
   .vertical-line {
-    height: 89.5%;
+    height: 93%;
   }
 
   .name {
@@ -1591,65 +1613,155 @@ span {
     top: 1850px;
   }
 
+  .img-comb,
+  .laptop,
+  .img-comb2 .laptop {
+    max-width: 290px;
+    height: auto;
+  }
+
+
+}
+
+@media(max-width:940px) {
+  .horiz1 {
+    width: 20.5%;
+    top: 265px;
+    left: 29%;
+  }
+
+  .horiz2 {
+    width: 18%;
+    top: 750px;
+    left: 50.2%;
+  }
+
+  .horiz3 {
+    width: 19%;
+    top: 1220px;
+    left: 31%;
+  }
+
+  .horiz4 {
+    width: 19%;
+    top: 1626px;
+    left: 50.7%;
+  }
+
+  .horiz5 {
+    width: 15%;
+    top: 2100px;
+    left: 35%;
+  }
+
+  .l1 {
+    top: 200px;
+  }
+
+  .l2 {
+    top: 685px;
+    z-index: 3;
+  }
+
+  .l3 {
+    top: 1154px;
+    z-index: 3;
+  }
+
+  .l4 {
+    top: 1560px;
+
+  }
+
+  .l5 {
+    top: 2035px;
+  }
 }
 
 @media(max-width: 890px) {
+  .horiz1 {
+    width: 18%;
+    top: 265px;
+    left: 31.5%;
+  }
+
+  .horiz2 {
+    width: 16%;
+    top: 770px;
+    left: 50.6%;
+  }
+
   .horiz3 {
-    top: 1080px;
+    width: 17%;
+    top: 1200px;
+    left: 33%;
+  }
+
+  .horiz4 {
+    width: 17.5%;
+    top: 1667px;
+    left: 50.7%;
+  }
+
+  .horiz5 {
+    width: 15%;
+    top: 2100px;
+    left: 35%;
   }
 
   .vertical-line {
     height: 90.4%;
   }
 
-  .l3 {
-    top: 947px;
-  }
-}
-
-@media(max-width: 800px) {
-  .horiz3 {
-    top: 1120px;
-  }
-
-  .vertical-line {
-    height: 91%;
-  }
-
-  .l3 {
-    top: 987px;
-  }
-
-  .horiz2 {
-    top: 750px;
+  .l1 {
+    top: 200px;
   }
 
   .l2 {
-    top: 617px;
+    top: 705px;
   }
+
+  .l3 {
+    top: 1133px;
+  }
+
+  .l4 {
+    top: 1600px;
+
+  }
+
+  .l5 {
+    top: 2033px;
+  }
+
+  .img-comb,
+  .laptop,
+  .img-comb2 .laptop {
+    max-width: 290px;
+    height: auto;
+  }
+}
+
+@media(max-width: 850px) {
+
+  .vertical-line,
+  .horiz1,
+  .horiz2,
+  .horiz3,
+  .horiz4,
+  .horiz5,
+  .l1,
+  .l2,
+  .l3,
+  .l4,
+  .l5 {
+    display: none;
+  }
+
 }
 
 
 @media(max-width: 745px) {
-  .horiz3 {
-    top: 1140px;
-  }
-
-  .vertical-line {
-    height: 91%;
-  }
-
-  .l3 {
-    top: 1007px;
-  }
-
-  .horiz2 {
-    top: 770px;
-  }
-
-  .l2 {
-    top: 637px;
-  }
 
   .img-comb,
   .laptop,
@@ -1665,35 +1777,8 @@ span {
 
 }
 
-@media(max-width: 687px) {
-  .horiz3 {
-    top: 1180px;
-  }
-
-  .vertical-line {
-    height: 91.5%;
-  }
-
-  .l3 {
-    top: 1047px;
-  }
-}
 
 @media(max-width: 650px) {
-
-  .vertical-line,
-  .horiz1,
-  .horiz2,
-  .horiz3,
-  .horiz4,
-  .horiz5,
-  .l1,
-  .l2,
-  .l3,
-  .l4,
-  .l5 {
-    display: none;
-  }
 
   .pro1 {
     flex-direction: column;
