--- a/styles.css
+++ b/styles.css
@@ -211,8 +211,6 @@ body {
   max-width: 1140px;
   width: 100%;
   margin: 0 auto;
-  /* padding: 1rem 0; */
-  min-height: 100vh;
   display: grid;
   place-items: center;
 }
@@ -410,7 +408,7 @@ body.dark-theme {
 .everything {
   display: none;
   max-width: 1600px;
-  margin-inline: auto;
+  margin: 0 auto;
 }
 
 * {
@@ -435,7 +433,6 @@ body {
 .landing-page {
   position: relative;
   display: block;
-  min-height: 100vh;
 }
 
 
@@ -807,59 +804,8 @@ span {
   left: 0;
 }
 
-/* Dropdown for services  */
-/* Hide the dropdown menu by default */
-/* .dropdown-menu {
-  display: none;
-  position: absolute;
-  background-color: white;
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.dropdown-menu li {
-  padding: 10px;
-}
-
-.dropdown-menu li a {
-  color: #333;
-  text-decoration: none;
-  display: none;
-  padding: 8px 16px;
-}
-
-.dropdown-menu li a:hover {
-  background-color: #f1f1f1;
-  color: #024c80;
-}
-
-/* Show the dropdown when toggled */
-/* .dropdown.show .dropdown-menu {
-  display: block;
-}
-
-.dropdown.show .dropdown-menu li a {
-  display: block;
-  color: #333;
-  padding: 8px 16px;
-}
-
-/* Style for the dropdown sign */
-/* .dropdown-sign {
-  font-size: 0.99em;
-  margin-left: 5px;
-  transition: transform 0.3s ease;
-}
-
-.dropdown.show .dropdown-sign {
-  transform: rotate(180deg);
-}  */
-
 /* about section */
 .aboutme {
-  width: 100vw;
   min-height: 500px;
   padding: 20px;
   background: url('./image/cube3d.png') no-repeat center center/cover;
@@ -960,6 +906,7 @@ span {
   display: block;
   text-align: center;
   color: #fff;
+  transition: 1s;
 }
 
 .mongo,
@@ -971,18 +918,22 @@ span {
 
 .mongo:hover {
   border: 2px solid green;
+  transition: 0.5s;
 }
 
 .express:hover {
   border: 2px solid yellow;
+  transition: 0.5s;
 }
 
 .react:hover {
   border: 2px solid rgb(32, 32, 219);
+  transition: 0.5s;
 }
 
 .node:hover {
   border: 2px solid rgb(95, 156, 5);
+  transition: 0.5s;
 }
 
 /* about content styling */
@@ -1082,7 +1033,7 @@ span {
 /* Skills section */
 .skills {
   width: 100%;
-  /* padding: 2rem 20px; */
+  padding: 2rem 20px;
   text-align: center;
   background-color: #fff;
 }
@@ -1201,10 +1152,11 @@ span {
 
 /* project section */
 .project {
-  width: 100vw;
   background-color: #ffffff;
   height: auto;
   position: relative;
+  /* min-height: 2118px; */
+  max-width: 1519px;
 }
 
 .heading {
@@ -1308,7 +1260,8 @@ span {
 .img-comb2 .laptop {
   max-width: 400px;
   height: auto;
-  /* box-shadow: 0 1px 2px grey; */
+  position: relative;
+  z-index: 55 !important;
 }
 
 .p1-content {
@@ -1483,6 +1436,297 @@ span {
 }
 
 /* responsive design for projects */
+@media(max-width: 1600px) {
+  .horiz1 {
+    width: 31%;
+    top: 260px;
+    left: 19%;
+  }
+
+  .horiz2 {
+    width: 30%;
+    top: 600px;
+    left: 50.3%;
+  }
+
+  .horiz3 {
+    width: 30%;
+    top: 910px;
+    left: 20%;
+  }
+
+  .horiz4 {
+    width: 30.5%;
+    top: 1195px;
+    left: 50.4%;
+  }
+
+  .horiz5 {
+    width: 30%;
+    top: 1550px;
+    left: 20%;
+  }
+
+  .l1 {
+    top: 195px;
+  }
+
+  .l2 {
+    top: 535px;
+  }
+
+  .l3 {
+    top: 840px;
+  }
+
+  .l4 {
+    top: 1130px;
+
+  }
+
+  .l5 {
+    top: 1484px;
+  }
+
+  .img-comb,
+  .laptop,
+  .img-comb2 .laptop {
+    max-width: 300px;
+    height: auto;
+    /* z-index: 20; */
+  }
+
+  .p1-content p,
+  .p2-content p {
+    font-size: 14px;
+  }
+
+  .hash ul li {
+    padding: 3px 8px;
+    font-size: 14px;
+  }
+
+  .vertical-line {
+    height: 94%;
+  }
+
+  .name {
+    left: 24%;
+  }
+}
+
+@media(max-width: 1374px) {
+  .horiz1 {
+    width: 28.6%;
+    top: 260px;
+    left: 21.2%;
+  }
+
+  .horiz2 {
+    width: 26.6%;
+    top: 610px;
+    left: 50.8%;
+  }
+
+  .horiz3 {
+    width: 28%;
+    top: 990px;
+    left: 22%;
+  }
+
+  .horiz4 {
+    width: 28.5%;
+    top: 1295px;
+    left: 50.4%;
+  }
+
+  .horiz5 {
+    width: 27%;
+    top: 1630px;
+    left: 23%;
+  }
+
+  .l1 {
+    top: 195px;
+  }
+
+  .l2 {
+    top: 543px;
+  }
+
+  .l3 {
+    top: 924px;
+    z-index: 6;
+  }
+
+  .l4 {
+    top: 1228px;
+
+  }
+
+  .l5 {
+    top: 1564px;
+    z-index: 6;
+  }
+
+  .p1-content p,
+  .p2-content p {
+    font-size: 14px;
+  }
+
+  .hash ul li {
+    padding: 3px 8px;
+    font-size: 14px;
+  }
+
+  .name {
+    left: 24%;
+  }
+}
+
+@media(max-width:1287px) {
+  .horiz1 {
+    width: 27%;
+    top: 260px;
+    left: 23%;
+  }
+
+  .horiz2 {
+    width: 25.2%;
+    top: 620px;
+    left: 50.2%;
+  }
+
+  .horiz3 {
+    width: 26%;
+    top: 1005px;
+    left: 24%;
+  }
+
+  .horiz4 {
+    width: 27%;
+    top: 1295px;
+    left: 50.4%;
+  }
+
+  .horiz5 {
+    width: 25.5%;
+    top: 1700px;
+    left: 24.3%;
+  }
+
+  .l1 {
+    top: 195px;
+  }
+
+  .l2 {
+    top: 555px;
+  }
+
+  .l3 {
+    top: 940px;
+  }
+
+  .l4 {
+    top: 1230px;
+
+  }
+
+  .l5 {
+    top: 1634px;
+  }
+
+  .p1-content p,
+  .p2-content p {
+    font-size: 14px;
+  }
+
+  .hash ul li {
+    padding: 3px 8px;
+    font-size: 14px;
+  }
+
+  .name {
+    left: 24%;
+  }
+}
+
+@media(max-width:1248px) {
+  .horiz4 {
+    width: 26%;
+    top: 1395px;
+    left: 50.4%;
+  }
+
+  .horiz5 {
+    width: 25.5%;
+    top: 1820px;
+    left: 24.3%;
+  }
+
+  .l4 {
+    top: 1230px;
+
+  }
+
+  .l5 {
+    top: 1634px;
+  }
+}
+
+@media(max-width:1144px) {
+  .horiz1 {
+    width: 25%;
+    top: 260px;
+    left: 25%;
+  }
+
+  .horiz2 {
+    width: 23%;
+    top: 620px;
+    left: 50.2%;
+  }
+
+  .horiz3 {
+    width: 22.7%;
+    top: 1035px;
+    left: 27%;
+  }
+
+  .horiz4 {
+    width: 24%;
+    top: 1410px;
+    left: 50.4%;
+  }
+
+  .horiz5 {
+    width: 23%;
+    top: 1900px;
+    left: 27%;
+  }
+
+  .l1 {
+    top: 195px;
+  }
+
+  .l2 {
+    top: 555px;
+  }
+
+  .l3 {
+    top: 970px;
+  }
+
+  .l4 {
+    top: 1343px;
+
+  }
+
+  .l5 {
+    top: 1834px;
+  }
+}
+
 @media(max-width: 1125px) {
   .horiz1 {
     width: 22%;
@@ -1533,13 +1777,6 @@ span {
 
   .l5 {
     top: 1850px;
-  }
-
-  .img-comb,
-  .laptop,
-  .img-comb2 .laptop {
-    max-width: 300px;
-    height: auto;
   }
 
   .p1-content p,
@@ -1623,6 +1860,14 @@ span {
 
 }
 
+@media(max-width:998px) {
+  .horiz4 {
+    width: 19.6%;
+    top: 1465px;
+    left: 50.7%;
+  }
+}
+
 @media(max-width:940px) {
   .horiz1 {
     width: 20.5%;
@@ -1649,9 +1894,9 @@ span {
   }
 
   .horiz5 {
-    width: 15%;
+    width: 17%;
     top: 2100px;
-    left: 35%;
+    left: 32.8%;
   }
 
   .l1 {
@@ -1742,6 +1987,50 @@ span {
   }
 }
 
+@media(max-width:957px) {
+
+  .horiz2 {
+    width: 18%;
+    top: 770px;
+    left: 50.6%;
+  }
+
+  .horiz3 {
+    width: 19%;
+    top: 1200px;
+    left: 31%;
+  }
+
+  .horiz4 {
+    width: 19.4%;
+    top: 1667px;
+    left: 50.7%;
+  }
+
+  .horiz5 {
+    width: 18%;
+    top: 2100px;
+    left: 32%;
+  }
+
+  .l2 {
+    top: 705px;
+  }
+
+  .l3 {
+    top: 1133px;
+  }
+
+  .l4 {
+    top: 1600px;
+
+  }
+
+  .l5 {
+    top: 2033px;
+  }
+}
+
 @media(max-width: 850px) {
 
   .vertical-line,
@@ -1811,11 +2100,9 @@ span {
   }
 }
 
-/* upper responsive design */
 /* Certification Section */
 .certification {
-  width: 100vw;
-  padding: 20px;
+  padding: 2rem 20px;
   background-color: #f8f8f8;
 }
 
@@ -1826,7 +2113,6 @@ span {
 }
 
 .certificationhead h1 {
-  /* text-align: center; */
   font-size: 36px;
   color: #333;
   border-bottom: 2px solid rgb(108, 59, 7);
@@ -2010,7 +2296,6 @@ button:hover {
 /* contact */
 
 .contacts {
-  width: 100vw;
   background-color: #ffffff;
   padding: 40px 20px;
 }
@@ -2174,7 +2459,6 @@ textarea {
 
 /* footer */
 footer {
-  width: 100vw;
   background-color: #333;
   color: #fff;
   padding: 40px 20px;
